--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -35,8 +35,7 @@
     "declaration": true,
     "declarationMap": true,
     "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
+      "./node_modules/@types"
     ]
   },
   "include": ["src/**/*"],
