--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,6 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "jest"
-
   },
   "keywords": [
     "node",
@@ -37,8 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^6.10.1",
-    "uuid": "^11.1.0",
-    "@types/node": "^20.19.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -47,7 +45,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.10",
-
+    "@types/node": "^24.0.7",
     "@types/nodemailer": "^6.4.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
